修改后的网页

--- a/templates/Authentication/previous12.7/signup.html
+++ b/templates/Authentication/previous12.7/signup.html
@@ -94,6 +94,7 @@
             <p id="face_email_txt">E-mail</p>
             <input id="username" type="text">
             <button id="capture_btn">Capture</button>
+            <button id="Face_login_button">Login(之后合并到Capture)</button>
             <div id="webcam"></div>
           </div>
         </div>
@@ -103,8 +104,8 @@
       <img id="Signup_bgd" src="/static/images/video_display/u0.png"/>
 
       <a id="signup_img" class="shape" href="#">
-        <p id="signup_img_txt">+</p>
         <img id="signup_img_bgd" src="/static/images/upload/u60.png"/>
+        <p id="signup_img_txt">+</p>
       </a>
 
       <p id="signup_email_txt" class="h2">E-mail:</p>
@@ -132,22 +133,14 @@
       </button>
     </div>
 
-    <div id="Upload_image">
-      <img id="Upload_image_bgd" src="/static/images/edit/u94.png"/>
-      <a href="#"><img id="Upload_image_close" src="/static/images/edit/close.png"/></a>
-    </div>
-      <div id = "Upload_image_content">
-        <img id="preview" src="/static/images/edit/u98.png" width="250" height="250" style="display: block; width: 250px; height: 250px;">
-        <input type="file" name="file" id="doc" style="width:150px;" onchange="javascript:setImagePreview();">
-        <p id="Upload_image_txt" class="paragraph">Choose Filter</p>
-        <select id="filter_select">
-          <option selected value="Filter0">None</option>
-          <option value="Filter1">Filter1</option>
-          <option value="Filter2">Filter2</option>
-        </select>
-        <button id="filter_btn">Apply</button>
+      <div id="Upload_image">
+        <img id="Upload_image_bgd" src="/static/images/edit/u94.png"/>
+        <a href="#"><img id="Upload_image_close" src="/static/images/edit/close.png"/></a>
+        <img id="Upload_image_img" src="/static/images/edit/u98.png"/>
+        <p id="Upload_image_txt" class="paragraph">左边放头像，右边放一些处理图片的工具</p>
+        <input id="Upload_image_file" type="file" name="avatar" value=""/>
       </div>
-    
+
     <div id="blank"></div>
     <div id = "Footer">
         <a href="/about_us/"><p id="Footer_txt_1" class="paragraph">Contact us</p></a>
