--- a/templates/Webpages/previous12.7/uploaded_video.html
+++ b/templates/Webpages/previous12.7/uploaded_video.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Audio</title>
+	<title>Uploaded Video</title>
 	<meta charset='utf-8'/>
   <link href="/static/css/styles.css" type="text/css" rel="stylesheet"/>
   <link href="/static/css/header.css" type="text/css" rel="stylesheet"/>
-  <link rel="stylesheet" type="text/css" href="/static/css/audio.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/uploaded_video.css">
 	<script type="text/javascript" src="/static/js/jquery.js"></script>
 	<script type="text/javascript" src="/static/js/header.js"></script>
-  <script type="text/javascript" src="/static/js/audio.js"></script>
+  <script type="text/javascript" src="/static/js/uploaded_video.js"></script>
   <script src="/static/js/jquery.webcam.min.js"></script>
 </head>
 <body>
@@ -94,92 +94,42 @@
             <p id="face_email_txt">E-mail</p>
             <input id="username" type="text">
             <button id="capture_btn">Capture</button>
+            <button id="Face_login_button">Login(之后合并到Capture)</button>
             <div id="webcam"></div>
           </div>
         </div>
   </div>
-  <!-- Photo -->
-  <div class="Photo_display">
-    <!-- Photo -->
-    <div id='photo'>
-      <ul>
-        <li id='li1'><a href='#'><img src='/static/images/home/photo_1.jpg'/></a></li>
-        <li id='li2'><a href='#'><img src='/static/images/home/photo_2.png'/></a></li>
-        <li id='li3'><a href='#'><img src='/static/images/home/photo_3.jpg'/></a></li>
-        <li id='li4'><a href='#'><img src='/static/images/home/photo_4.jpg'/></a></li>
-      </ul>
-    </div>
-    <!-- next -->
-    <a id="next" href="#">
-      <img class="photo_nav_bgd" src="/static/images/home/next_u123.png"/>
-      <p class="photo_nav_txt">&gt;</p>
-    </a>
 
-    <!-- pre -->
-    <a id="pre" href="#">
-      <img class="photo_nav_bgd" src="/static/images/home/next_u123.png"/>
-      <p class="photo_nav_txt">&lt;</p>
-    </a>
-
-    <!-- mark -->
-    <div id="mark">
-      <ul>
-        <li id="markli4">
-          <a href="#"><img id="marker1" class="mark_item" src="/static/images/home/u130.png"/></a>
-          <a href="#"><img id="marker2" class="mark_item" src="/static/images/home/u130.png"/></a>
-          <a href="#"><img id="marker3" class="mark_item" src="/static/images/home/u130.png"/></a>
-          <a href="#"><img id="marker4" class="mark_item" src="/static/images/home/u128.png"/></a>
-        </li>
-        <li id="markli3">
-          <a href="#"><img id="marker1" class="mark_item" src="/static/images/home/u130.png"/></a>
-          <a href="#"><img id="marker2" class="mark_item" src="/static/images/home/u130.png"/></a>
-          <a href="#"><img id="marker3" class="mark_item" src="/static/images/home/u128.png"/></a>
-          <a href="#"><img id="marker4" class="mark_item" src="/static/images/home/u130.png"/></a>
-        </li>
-        <li id="markli2">
-          <a href="#"><img id="marker1" class="mark_item" src="/static/images/home/u130.png"/></a>
-          <a href="#"><img id="marker2" class="mark_item" src="/static/images/home/u128.png"/></a>
-          <a href="#"><img id="marker3" class="mark_item" src="/static/images/home/u130.png"/></a>
-          <a href="#"><img id="marker4" class="mark_item" src="/static/images/home/u130.png"/></a>
-        </li>
-        <li id="markli1">
-          <a href="#"><img id="marker1" class="mark_item" src="/static/images/home/u128.png"/></a>
-          <a href="#"><img id="marker2" class="mark_item" src="/static/images/home/u130.png"/></a>
-          <a href="#"><img id="marker3" class="mark_item" src="/static/images/home/u130.png"/></a>
-          <a href="#"><img id="marker4" class="mark_item" src="/static/images/home/u130.png"/></a>
-        </li>
-      </ul>
-    </div>
-  </div>
-
-  <div class="display_detail">
-      {% for k, a in audio_list.items %}
-      <div id = "Audio{{ forloop.counter0 }}" class="audio_display">
-        <p class="Title">{{ k }}</p>
-        <a class="More" href="#" style="text-decoration:underline;">more</a>
-        <ul id="display_detail0" class="display">
-        {% for audio in a %}
-          <li>
-            <div class="item">
-              <img id="item_cover" src="{{ audio.cover.url }}"/>
-              <div id="item_change">
-                <img id="item_change_img" src="/static/images/audio/up.png"/>
-              </div>
-              <p id="item_rank">{{ forloop.counter }}</p>
-              <img id="play_bg" src="/static/images/audio/play_bg_u82.png"/>
-              <a href="/audio_playpage/{{ audio.audio }}">
-                <img id="play_tri" src="/static/images/audio/play_tri_u84.png"/>
-              </a>
-              <p id="item_title">{{ audio.title }}</p>
-              <p id="item_singer">The chainsmokers Featuring Halsey</p>
-            </div>
+  <div id="Uploaded">
+        <p class="Title">Uploaded Video</p>
+        <ul id = "display_detail" class="display">
+          <li id="item0">
+            <img src="/static/images/home/photo_1.jpg">
+            <p>Gates</p>
+            <a href="video_display.html"></a>
           </li>
-        {% endfor %}
+          <li id="item1">
+            <img src="/static/images/home/photo_1.jpg">
+            <p>Gates</p>
+            <a href="video_display.html"></a>
+          </li>
+          <li id="item2">
+            <img src="/static/images/home/photo_1.jpg">
+            <p>Gates</p>
+            <a href="video_display.html"></a>
+          </li>
+          <li id="item3">
+            <img src="/static/images/home/photo_1.jpg">
+            <p>Gates</p>
+            <a href="video_display.html"></a>
+          </li>
+          <li id="item0" class="last">
+            <img src="/static/images/home/photo_1.jpg">
+            <p>Gates</p>
+            <a href="video_display.html"></a>
+          </li>
         </ul>
-      </div>
-      {% endfor %}
-
-      <!-- Footer -->
+        <!-- Footer -->
       <div id = "Footer">
         <a href="/about_us/"><p id="Footer_txt_1" class="paragraph">Contact us</p></a>
         <a href="/about_us/"><p id="Footer_txt_2" class="paragraph">About this website.</p></a>
@@ -193,9 +143,10 @@
         <img id="slice_4" class="slice" src="/static/images/header/slice.png"/>
       </div>
     </div>
+
+      
 </body>
 <script type="text/javascript">
-  $('#photo').slider();
   $("#capture_btn").click(function(){
       webcam.capture();
   });
