--- a/templates/Webpages/previous12.7/video_display.html
+++ b/templates/Webpages/previous12.7/video_display.html
@@ -96,6 +96,7 @@
             <p id="face_email_txt">E-mail</p>
             <input id="username" type="text">
             <button id="capture_btn">Capture</button>
+            <button id="Face_login_button">Login(之后合并到Capture)</button>
             <div id="webcam"></div>
           </div>
         </div>
