--- a/templates/Authentication/previous12.7/signup2.html
+++ b/templates/Authentication/previous12.7/signup2.html
@@ -5,10 +5,10 @@
   <meta charset='utf-8'/>
   <link href="/static/css/styles.css" type="text/css" rel="stylesheet"/>
   <link href="/static/css/header.css" type="text/css" rel="stylesheet"/>
-  <link rel="stylesheet" type="text/css" href="/static/css/signup.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/signup2.css">
   <script type="text/javascript" src="/static/js/jquery.js"></script>
   <script type="text/javascript" src="/static/js/header.js"></script>
-  <script type="text/javascript" src="/static/js/signup.js"></script>
+  <script type="text/javascript" src="/static/js/signup2.js"></script>
   <script src="/static/js/jquery.webcam.min.js"></script>
 </head>
   <body>
@@ -94,60 +94,38 @@
             <p id="face_email_txt">E-mail</p>
             <input id="username" type="text">
             <button id="capture_btn">Capture</button>
+            <button id="Face_login_button">Login(之后合并到Capture)</button>
             <div id="webcam"></div>
           </div>
         </div>
   </div>
-    <div id="base">
-      <p id="Signup_txt" class="h2">Sign up</p>
-      <img id="Signup_bgd" src="/static/images/video_display/u0.png"/>
+    <div id="base" class="">
+      <img id="Signup_bgd" src="/static/images/upload/u56.png"/>
+      <p id="Signup_title" class="h2">Sign up</p>
 
-      <a id="signup_img" class="shape" href="#">
-        <p id="signup_img_txt">+</p>
-        <img id="signup_img_bgd" src="/static/images/upload/u60.png"/>
-      </a>
-
-      <p id="signup_email_txt" class="h2">E-mail:</p>
-      <input id="signup_email_input" class="ax_text_field" type="text" name="email" value=""/>
-      <p id="signup_email_hint" class="paragraph">E-mail cannot be none!</p>
-
-      <p id="signup_usr_txt" class="h2">Username:</p>
-      <input id="signup_usr_input" class="ax_text_field" type="text" name="user" value=""/>
-      <p id="signup_usr_hint" class="paragraph">Username cannot be none!</p>
-
-      <p id="signup_pwd_txt" class="h2">Password:</p>
-      <input id="signup_pwd_input" name="password" type="password" class="ax_text_field" type="text" value=""/>
-      <p id="signup_pwd_hint" class="paragraph">Password is too short!</p>
-
-      <p id="signup_rpwd_txt" class="h2">Reenter Password:</p>
-      <input id="signup_rpwd_input" type="password" class="ax_text_field" type="text" value=""/>
-      <p id="signup_rpwd_hint" class="paragraph">Different passwords!</p>
-
-      <p id="signup_dis_txt" class="h2">Discription:</p>
-      <textarea id="signup_dis_input" class="ax_text_area" name="discription"></textarea>
-
-      <button id="Signup_bt" class="shape" >
-        <img id="Signup_bt_bgd" src="/static/images/edit/u62.png"/>
-        <p id="Signup_bt_txt">Next</p>
-      </button>
-    </div>
-
-    <div id="Upload_image">
-      <img id="Upload_image_bgd" src="/static/images/edit/u94.png"/>
-      <a href="#"><img id="Upload_image_close" src="/static/images/edit/close.png"/></a>
-    </div>
-      <div id = "Upload_image_content">
-        <img id="preview" src="/static/images/edit/u98.png" width="250" height="250" style="display: block; width: 250px; height: 250px;">
-        <input type="file" name="file" id="doc" style="width:150px;" onchange="javascript:setImagePreview();">
-        <p id="Upload_image_txt" class="paragraph">Choose Filter</p>
-        <select id="filter_select">
-          <option selected value="Filter0">None</option>
-          <option value="Filter1">Filter1</option>
-          <option value="Filter2">Filter2</option>
-        </select>
-        <button id="filter_btn">Apply</button>
+      <p id="Signup_hint" class="paragraph">3 photos are required to be taken for Face Login function</p>
+      <div id="Signup_camera">
+          <div id="webcam2"></div>
       </div>
-    
+      <button id="Take_photo">Take photo</button>
+
+      <img id="Photo_img_1" src="/static/images/upload/u60.png"/>
+      <p id="Photo_txt_1" class="paragraph">Photo 1</p>
+      <a href="#"><p id="Photo_delete_1" class="paragraph">delete</p></a>
+
+      <img id="Photo_img_2" src="/static/images/upload/u60.png"/>
+      <p id="Photo_txt_2" class="paragraph">Photo 2</p>
+      <a href="#"><p id="Photo_delete_2" class="paragraph">delete</p></a>
+
+      <img id="Photo_img_3" src="/static/images/upload/u60.png"/>
+      <p id="Photo_txt_3" class="paragraph">Photo 3</p>
+      <a href="#"><p id="Photo_delete_3" class="paragraph">delete</p></a>
+
+      <a id="Signup_bt" class="shape" href="/">
+        <img id="Signup_bt_bgd" src="/static/images/edit/u62.png"/>
+        <p id="Signup_bt_txt">Sign up</p>
+      </a>
+    </div>
     <div id="blank"></div>
     <div id = "Footer">
         <a href="/about_us/"><p id="Footer_txt_1" class="paragraph">Contact us</p></a>
@@ -166,11 +144,8 @@
   $("#capture_btn").click(function(){
       webcam.capture();
   });
+  $("#Take_photo").click(function(){
+      webcam.capture();
+  });
 </script>
-{% if username %}
-    <script>
-        document.getElementById("Search_login").style.visibility="hidden";
-        document.getElementById("User").style.visibility="visible";
-    </script>
-{% endif %}
 </html>
