--- a/templates/Webpages/previous12.7/audio_display.html
+++ b/templates/Webpages/previous12.7/audio_display.html
@@ -1,19 +1,23 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-  <title>Video display</title>
+  <title>Audio display</title>
   <meta charset='utf-8'/>
   <link href="/static/css/styles.css" type="text/css" rel="stylesheet"/>
   <link href="/static/css/header.css" type="text/css" rel="stylesheet"/>
-  <link rel="stylesheet" type="text/css" href="/static/css/video_display.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/audio_display.css">
   <script type="text/javascript" src="/static/js/jquery.js"></script>
   <script type="text/javascript" src="/static/js/header.js"></script>
-  <script type="text/javascript" src="/static/js/video_display.js"></script>
+  <script type="text/javascript" src="/static/js/audio_display.js"></script>
+  <script src="/static/audioplayerengine/jquery.js"></script>
+  <script src="/static/audioplayerengine/amazingaudioplayer.js"></script>
+  <link rel="stylesheet" type="text/css" href="/static/audioplayerengine/initaudioplayer-1.css">
+  <script src="/static/audioplayerengine/initaudioplayer-1.js"></script>
   <script src="/static/js/jquery.webcam.min.js"></script>
 </head>
   <body>
-  <input id="page_identify" style="display: none" value="{{ video.video }}">
-  <div id="base" class="">
+    <div id="base" class="">
+
   <div id='header'>
         <!-- Logo -->
         <div id='logo'>
@@ -96,34 +100,43 @@
             <p id="face_email_txt">E-mail</p>
             <input id="username" type="text">
             <button id="capture_btn">Capture</button>
+            <button id="Face_login_button">Login(之后合并到Capture)</button>
             <div id="webcam"></div>
           </div>
         </div>
   </div>
 
-      <div id="Display_image">
-        <p id="Image_txt" class="h2">{{ video.title }}</p>
-        <img id="Image_bgd" class="shape" src="/static/images/video_display/u0.png"/>
-        <div style="position: absolute;left: 150px;top: 30px;width: 1100px;height: 600px;"><div id="a1"></div></div>
-
-        <div id="icon">
-          <a href="#"><img id="Image_download_icon" src="/static/images/video_display/u58.png"/></a>
-          <p id="Image_download_txt" class="h2">Download</p>
-          <a href="#"><img id="Image_like_icon" class="image" src="/static/images/video_display/u62.png"/></a>
-          <p id="Image_like_txt" class="h2">Like</p>
-          <p id="Image_like_num" class="h2">{{ video.like }}</p>
-          <a href="#"><img id="Image_dislike_icon" class="image" src="/static/images/video_display/u68.png"/></a>
-          <p id="Image_dislike_txt" class="h2">Dislike</p>
-          <p id="Image_dislike_num" class="h2">{{ video.dislike }}</p>
-          <a href="#"><img id="Image_collect_icon" class="shape" src="/static/images/video_display/u56.png"/></a>
-          <p id="Image_collect_txt" class="h2">Collect</p>
+      <div id="Audio">
+        <img id="Audio_bgd" src="/static/images/audio_display/u0.png"/>
+        <a href="#"><img id="Download_icon" src="/static/images/video_display/u58.png"/></a>
+        <p id="Download_txt" class="h2">Download</p>
+        <a href="#"><img id="Like_icon" class="ax_image" src="/static/images/video_display/u62.png"/></a>
+        <p id="Like_txt" class="h2">Like</p>
+        <p id="Like_num" class="h2">111</p>
+        <a href="#"><img id="Dislike_icon" class="ax_image" src="/static/images/video_display/u68.png"/></a>
+        <p id="Dislike_txt" class="h2">Dislike</p>
+        <p id="Dislike_num" class="h2">4</p>
+        <a href="#"><img id="Collect_icon" src="/static/images/video_display/u56.png"/></a>
+        <p id="Collect_txt" class="h2">Collect</p>
+        <p id="Audio_title" class="h2">Starboy</p>
+        <img id="Audio_cover" src="/static/images/video_display/image_u125.jpg"/>
+        <iframe id="Audio_lyric" class="ax_inline_frame" scrolling="auto" frameborder="0" src="/audio_lyric/123"></iframe>
+        <div id="Audio_player" class="shape">
+            <div id="amazingaudioplayer-1" style="display:block;position:relative;width:300px;height:164px;margin:0px auto 0px;">
+            <ul class="amazingaudioplayer-audios" style="display:none;">
+                <li data-artist="" data-title="{{ audio.title }}" data-album="" data-info="" data-image="{{ audio.cover.url }}" data-duration="0">
+                    <div class="amazingaudioplayer-source" data-src="{{ audio.audio.url }}" data-type="audio/mpeg" />
+                </li>
+            </ul>
+            <div class="amazingaudioplayer-engine"><a href="http://amazingaudioplayer.com" title="html5 audio player">audio player for website</a></div>
+            </div>
         </div>
       </div>
 
       <div id="Download_page">
           <img id="Download_bgd" src="/static/images/edit/u94.png"/>
           <a href="#"><img id="Download_close" src="/static/images/edit/close.png"/></a>
-          <p id="Download_title" class="h2">Download Video</p>
+          <p id="Download_title" class="h2">Download Audio</p>
 
           <p id="Download_choice0" class="paragraph">MP4</p>
           <p id="Download_choice1" class="paragraph">MPEG-4</p>
@@ -137,70 +150,86 @@
           <a href="#"><p id="Download_address3" class="paragraph">Download Address</p></a>
           <a href="#"><p id="Download_address4" class="paragraph">Download Address</p></a>
       </div>
-      
-      <div id="Display_discription">
-        <img id="Discription_bgd" class="shape" src="/static/images/video_display/u80.png"/>
-        <p id="Discription_title" class="h2">Discription</p>
-        <img id="Discription_cover" src="{{ video.cover.url }}"/>
-        <p id="Discription_name" class="h2">{{ video.title }}</p>
-        <p id="Discription_txt" class="paragraph">{{ video.discription }}</p>
-      </div>
 
       <div id="Display_author">
         <img id="Author_bgd" class="shape" src="/static/images/video_display/u76.png"/>
         <p id="Author_txt" class="h2">Author</p>
-        <img id="Author_img" class="image" src="{{ video.user.avatar.url }}"/>
-        <a href="/personal_page/{{ video.user.username }}"><p id="Author_name" class="h2">{{ video.user.username }}</p></a>
-        <p id="Author_discription" class="paragraph">{{ video.user.discription }}</p>
+        <img id="Author_img" class="image" src="/static/images/video_display/image_u125.jpg"/>
+        <a href="personal_page.html"><p id="Author_name" class="h2">Starboy</p></a>
+        <p id="Author_discription" class="paragraph">Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.</p>
       </div>
 
       <div id="Display_recommand">
         <img id="Recommand_bgd" class="shape" src="/static/images/video_display/u86.png"/>
         <p id="Recommand_title" class="h2">Recommendation</p>
         <ul id="recommand">
-            {% for foo in recommand_list %}
-          <li id="item{{ forloop.counter0 }}">
-           <img class="recommand_img" src="{{ foo.cover.url }}"/>
-           <a href="/playpage/{{ foo.video }}"></a>
-           <p class="paragraph recommand_name">{{ foo.title }}</p>
+          <li id="item0">
+           <img class="recommand_img" src="/static/images/home/photo_1.jpg"/>
+           <a href="#"></a>
+           <p class="paragraph recommand_name">SCHW</p>
          </li>
-            {% endfor %}
+          <li id="item1">
+            <img class="recommand_img" src="/static/images/home/photo_3.jpg"/>
+            <a href="#"></a>
+            <p class="paragraph recommand_name">Maritime</p>
+          </li>
+          <li id="item2">
+            <img class="recommand_img" src="/static/images/video_display/u96.jpg"/>
+            <a href="#"></a>
+            <p class="paragraph recommand_name">Gipfel</p>
+          </li>
+          <li id="item3">
+            <img class="recommand_img" src="/static/images/video_display/u98.jpg"/>
+            <a href="#"></a>
+            <p class="paragraph recommand_name">Weite</p>
+          </li>
+          <li id="item4">
+            <img class="recommand_img" src="/static/images/video_display/u100.jpg"/>
+            <a href="#"></a>
+            <p class="paragraph recommand_name">Schwane</p>
+          </li>
         </ul>
       </div>
-    {% if carrent_user %}
+
       <div id="Write_comment">
         <p id="Comment_title" class="h2">Comments</p>
+        <!-- Unnamed (Shape) -->
         <img id="Comment_bgd" class="ax_shape" src="/static/images/video_display/u143.png"/>
         <textarea id="Comment_input" class="ax_text_area"></textarea>
-        <img id="Comment_img" class="ax_image" data-label="Image" src="{{ carrent_user.avatar.url }}"/>
-        <p id="Comment_name" class="h2" data-label="name">{{ username }}</p>
-        <a id="Comment_send" href="#" class="shape">
+        <img id="Comment_img" class="ax_image" data-label="Image" src="/static/images/video_display/image_u125.jpg"/>
+        <p id="Comment_name" class="h2" data-label="name">Starboy</p>
+        <a id="Comment_send" class="shape" href="#">
           <img id="send_button" src="/static/images/video_display/u150.png"/>
           <p id="send_txt" class="text">Send</p>
         </a>
       </div>
-    {% else %}
-      <div id="Write_comment">
-        <p id="Comment_title" class="h2">Comments</p>
-        <img id="Comment_bgd" class="ax_shape" src="/static/images/video_display/u143.png"/>
-
-      </div>
-    {% endif %}
 
       <div id="Display_comments">
         <ul>
-            {% for c in comments %}
           <li id="comment0" class="comments">
             <img class="shape Comments_bgd" src="/static/images/video_display/u123.png"/>
-            <a href="/personal_page/{{ c.user.username }}"><img class="image Comments_img" src="{{ c.user.avatar.url }}"/></a>
-            <a href="/personal_page/{{ c.user.username }}"><p class="h2 Comments_name">{{ c.user.username }}</p></a>
+            <a href="personal_page.html"><img class="image Comments_img" src="/static/images/video_display/image_u125.jpg"/></a>
+            <a href="personal_page.html"><p class="h2 Comments_name">Starboy</p></a>
             <!-- comment (Shape) -->
-            <p class="paragraph Comments_content" data-label="comment">{{ c.content }}</p>
-            <p class="paragraph Comments_floor">#{{ forloop.counter }}</p>
-            <p class="paragraph Comments_date" data-label="Date">{{ c.create_time.date }}</p>
-            <p class="paragraph Comments_time" data-label="Time">{{ c.create_time.time }}</p>
+            <p class="paragraph Comments_content" data-label="comment">Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.</p>
+            <a href="#"><img class="Comments_like_img" src="/static/images/video_display/u131.png"/></a>
+            <p class="paragraph Comments_like_num">5</p>
+            <p class="paragraph Comments_floor">#1</p>
+            <p class="paragraph Comments_date" data-label="Date">2016.11.6</p>
+            <p class="paragraph Comments_time" data-label="Time">11:48</p>
           </li>
-          {% endfor %}
+          <li id="comment1" class="comments">
+            <img class="shape Comments_bgd" src="/static/images/video_display/u123.png"/>
+            <a href="personal_page.html"><img class="image Comments_img" src="/static/images/video_display/image_u125.jpg"/></a>
+            <a href="personal_page.html"><p class="h2 Comments_name">Starboy</p></a>
+            <!-- comment (Shape) -->
+            <p class="paragraph Comments_content" data-label="comment">Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.Some discription about the author, who he/she is? whe he/she get his/her inspiration from? Lots of staff basically about anything.</p>
+            <a href="#"><img class="Comments_like_img" src="/static/images/video_display/u131.png"/></a>
+            <p class="paragraph Comments_like_num">5</p>
+            <p class="paragraph Comments_floor">#1</p>
+            <p class="paragraph Comments_date" data-label="Date">2016.11.6</p>
+            <p class="paragraph Comments_time" data-label="Time">11:48</p>
+          </li>
         </ul>
         <div id="blank"></div>
         <!-- Footer -->
@@ -218,34 +247,16 @@
       </div>
       </div>
     </div>
-
-  <!--ckplayer js-->
-    <script type="text/javascript">
-		var isLive=false;
-	</script>
-	<script type="text/javascript" src="/static/ckplayer/ckplayer/ckplayer.js" charset="utf-8"></script>
-	<script type="text/javascript" src="/static/ckplayer/js/barrage.js" charset="utf-8"></script>
-	<script type="text/javascript">
-
-		var flashvars={
-			f:'{{ video.video.url }}',
-			c:0,
-			b:0,
-			loaded:'loadedHandler'
-			};
-		var video=['http://movie.ks.js.cn/flv/other/1_0.mp4->video/mp4'];
-		CKobject.embed('/static/ckplayer/ckplayer/ckplayer.swf','a1','ckplayer_a1','1100','600',false,flashvars,video)
-	</script>
+  </body>
 <script type="text/javascript">
   $("#capture_btn").click(function(){
       webcam.capture();
   });
 </script>
-    {% if username %}
+{% if username %}
     <script>
         document.getElementById("Search_login").style.visibility="hidden";
         document.getElementById("User").style.visibility="visible";
     </script>
-    {% endif %}
-  </body>
+{% endif %}
 </html>
