--- a/templates/Webpages/previous12.7/signup.html
+++ b/templates/Webpages/previous12.7/signup.html
@@ -94,62 +94,56 @@
             <p id="face_email_txt">E-mail</p>
             <input id="username" type="text">
             <button id="capture_btn">Capture</button>
+            <button id="Face_login_button">Login(之后合并到Capture)</button>
             <div id="webcam"></div>
           </div>
         </div>
   </div>
+    
     <div id="base">
       <p id="Signup_txt" class="h2">Sign up</p>
       <img id="Signup_bgd" src="/static/images/video_display/u0.png"/>
 
       <a id="signup_img" class="shape" href="#">
-        <p id="signup_img_txt">+</p>
         <img id="signup_img_bgd" src="/static/images/upload/u60.png"/>
+        <p id="signup_img_txt">+</p>
       </a>
 
       <p id="signup_email_txt" class="h2">E-mail:</p>
-      <input id="signup_email_input" class="ax_text_field" type="text" name="email" value=""/>
+      <input id="signup_email_input" class="ax_text_field" type="text" value=""/>
       <p id="signup_email_hint" class="paragraph">E-mail cannot be none!</p>
 
       <p id="signup_usr_txt" class="h2">Username:</p>
-      <input id="signup_usr_input" class="ax_text_field" type="text" name="user" value=""/>
+      <input id="signup_usr_input" class="ax_text_field" type="text" value=""/>
       <p id="signup_usr_hint" class="paragraph">Username cannot be none!</p>
 
       <p id="signup_pwd_txt" class="h2">Password:</p>
-      <input id="signup_pwd_input" name="password" type="password" class="ax_text_field" type="text" value=""/>
+      <input id="signup_pwd_input" type="password" class="ax_text_field" type="password" value=""/>
       <p id="signup_pwd_hint" class="paragraph">Password is too short!</p>
 
       <p id="signup_rpwd_txt" class="h2">Reenter Password:</p>
-      <input id="signup_rpwd_input" type="password" class="ax_text_field" type="text" value=""/>
+      <input id="signup_rpwd_input" type="password" class="ax_text_field" type="password" value=""/>
       <p id="signup_rpwd_hint" class="paragraph">Different passwords!</p>
 
       <p id="signup_dis_txt" class="h2">Discription:</p>
-      <textarea id="signup_dis_input" class="ax_text_area" name="discription"></textarea>
+      <textarea id="signup_dis_input" class="ax_text_area"></textarea>
 
-      <button id="Signup_bt" class="shape" >
+      <a id="Signup_bt" class="shape">
         <img id="Signup_bt_bgd" src="/static/images/edit/u62.png"/>
-        <p id="Signup_bt_txt">Next</p>
-      </button>
+        <p id="Signup_bt_txt">Sign up</p>
+      </a>
     </div>
 
-    <div id="Upload_image">
-      <img id="Upload_image_bgd" src="/static/images/edit/u94.png"/>
-      <a href="#"><img id="Upload_image_close" src="/static/images/edit/close.png"/></a>
-    </div>
-      <div id = "Upload_image_content">
-        <img id="preview" src="/static/images/edit/u98.png" width="250" height="250" style="display: block; width: 250px; height: 250px;">
-        <input type="file" name="file" id="doc" style="width:150px;" onchange="javascript:setImagePreview();">
-        <p id="Upload_image_txt" class="paragraph">Choose Filter</p>
-        <select id="filter_select">
-          <option selected value="Filter0">None</option>
-          <option value="Filter1">Filter1</option>
-          <option value="Filter2">Filter2</option>
-        </select>
-        <button id="filter_btn">Apply</button>
+      <div id="Upload_image">
+        <img id="Upload_image_bgd" src="/static/images/edit/u94.png"/>
+        <a href="#"><img id="Upload_image_close" src="/static/images/edit/close.png"/></a>
+        <img id="Upload_image_img" src="/static/images/edit/u98.png"/>
+        <p id="Upload_image_txt" class="paragraph">左边放头像，右边放一些处理图片的工具</p>
+        <input id="Upload_image_file" type="file" value=""/>
       </div>
-    
+
     <div id="blank"></div>
-    <div id = "Footer">
+      <div id = "Footer">
         <a href="/about_us/"><p id="Footer_txt_1" class="paragraph">Contact us</p></a>
         <a href="/about_us/"><p id="Footer_txt_2" class="paragraph">About this website.</p></a>
         <a href="/about_us/"><p id="Footer_txt_3" class="paragraph">About us</p></a>
