--- a/templates/Webpages/previous12.7/video.html
+++ b/templates/Webpages/previous12.7/video.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Audio</title>
+	<title>Video</title>
 	<meta charset='utf-8'/>
   <link href="/static/css/styles.css" type="text/css" rel="stylesheet"/>
   <link href="/static/css/header.css" type="text/css" rel="stylesheet"/>
-  <link rel="stylesheet" type="text/css" href="/static/css/audio.css">
+  <link rel="stylesheet" type="text/css" href="/static/css/video.css">
 	<script type="text/javascript" src="/static/js/jquery.js"></script>
 	<script type="text/javascript" src="/static/js/header.js"></script>
-  <script type="text/javascript" src="/static/js/audio.js"></script>
+  <script type="text/javascript" src="/static/js/video.js"></script>
   <script src="/static/js/jquery.webcam.min.js"></script>
 </head>
 <body>
-  <div id='header'>
+	<div id='header'>
         <!-- Logo -->
         <div id='logo'>
           <p id="Logo_title1">Super</p>
@@ -94,21 +94,21 @@
             <p id="face_email_txt">E-mail</p>
             <input id="username" type="text">
             <button id="capture_btn">Capture</button>
+            <button id="Face_login_button">Login(之后合并到Capture)</button>
             <div id="webcam"></div>
           </div>
         </div>
   </div>
-  <!-- Photo -->
   <div class="Photo_display">
     <!-- Photo -->
-    <div id='photo'>
-      <ul>
-        <li id='li1'><a href='#'><img src='/static/images/home/photo_1.jpg'/></a></li>
-        <li id='li2'><a href='#'><img src='/static/images/home/photo_2.png'/></a></li>
-        <li id='li3'><a href='#'><img src='/static/images/home/photo_3.jpg'/></a></li>
-        <li id='li4'><a href='#'><img src='/static/images/home/photo_4.jpg'/></a></li>
-      </ul>
-    </div>
+  	<div id='photo'>
+  		<ul>
+  			<li id='li1'><a href='#'><img src='/static/images/home/photo_1.jpg'/></a></li>
+  			<li id='li2'><a href='#'><img src='/static/images/home/photo_2.png'/></a></li>
+  			<li id='li3'><a href='#'><img src='/static/images/home/photo_3.jpg'/></a></li>
+  			<li id='li4'><a href='#'><img src='/static/images/home/photo_4.jpg'/></a></li>
+  		</ul>
+  	</div>
     <!-- next -->
     <a id="next" href="#">
       <img class="photo_nav_bgd" src="/static/images/home/next_u123.png"/>
@@ -153,31 +153,23 @@
   </div>
 
   <div class="display_detail">
-      {% for k, a in audio_list.items %}
-      <div id = "Audio{{ forloop.counter0 }}" class="audio_display">
+      {% for k, v in video_list.items %}
+      <div id = "Video{{ forloop.counter0 }}" class="video_display">
         <p class="Title">{{ k }}</p>
-        <a class="More" href="#" style="text-decoration:underline;">more</a>
-        <ul id="display_detail0" class="display">
-        {% for audio in a %}
-          <li>
-            <div class="item">
-              <img id="item_cover" src="{{ audio.cover.url }}"/>
-              <div id="item_change">
-                <img id="item_change_img" src="/static/images/audio/up.png"/>
-              </div>
-              <p id="item_rank">{{ forloop.counter }}</p>
-              <img id="play_bg" src="/static/images/audio/play_bg_u82.png"/>
-              <a href="/audio_playpage/{{ audio.audio }}">
-                <img id="play_tri" src="/static/images/audio/play_tri_u84.png"/>
-              </a>
-              <p id="item_title">{{ audio.title }}</p>
-              <p id="item_singer">The chainsmokers Featuring Halsey</p>
-            </div>
-          </li>
-        {% endfor %}
+        <a class="More" href="/search" style="text-decoration:underline;">more</a>
+        <ul id = "display_detail{{ forloop.counter0 }}" class="display">
+            {% for video in v %}
+                <li id="item{{ forloop.counter0 }}">
+                    <img src="{{ video.cover.url }}">
+                    <p>{{ video.title }}</p>
+                    <a href="/playpage/{{ video.video }}"></a>
+                </li>
+            {% endfor %}
         </ul>
       </div>
       {% endfor %}
+
+
 
       <!-- Footer -->
       <div id = "Footer">
